examples/errors/e0119.sdm
module example <https://example.com/api> is

  structure Foo

  structure Bar is
    name -> features Foo
  end

end
